Fixed Resource Card items sometimes not aligning properly on certain screen + text size combos

--- a/app/shared/resource-card/_resource-card.scss
+++ b/app/shared/resource-card/_resource-card.scss
@@ -144,6 +144,7 @@ $cellHeight: 50%;
     }
     @media (min-width: $screen-md-min) {
       flex: 1 2 40%;
+      display: flex;
     }
   }
 
